--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-   <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description"
+        content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -107,7 +108,7 @@
                     </div>
                 </div> -->
             </div>
-                </section>
+    </section>
     <!-- Blog Details Section End -->
 
     <section class="services  set-bg">
@@ -131,80 +132,95 @@
                 </div>
             </div>
             <div class="d-flex">
-                <div  id="header" class="col-lg-8 col-md-8">
+                <div id="header" class="col-lg-8 col-md-8">
                     <div class="row">
-                     <div class="blog__details__text ml-4 mr-4">
-                        <div class="blog__details__text__item">
-                    <div class="section-title">
-                        <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que
-                                fica para a vida!</b></h5>
-                        <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
-                            nascimento através de hábitos salutares.
-                            Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e
-                            saudável.
-                        </p>
+                        <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text__item">
+                                <div class="section-title">
+                                    <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que
+                                            fica para a vida!</b></h5>
+                                    <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
+                                        nascimento através de hábitos salutares.
+                                        Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e
+                                        saudável.
+                                    </p>
 
-                        <div class="section-title pt-4">
-                            <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
-                            <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                    <div class="section-title pt-4">
+                                        <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                        <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                    </div>
+                                    <ul class="list">
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Anamnese e Avaliação
+                                                    clínica</b></span>:
+                                            </a>
+                                            <ul>
+                                                <li>
+                                                    - Registo do historial clínico familiar e do paciente, bem como o
+                                                    seu
+                                                    estilo de vida
+                                                    praticado.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Avaliação
+                                                    bioquímica</b></span>: </a>
+                                            <ul>
+                                                <li>
+                                                    - Registo
+                                                    e avaliação de exames laboratoriais.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i>
+                                                <b>Antropometria</b></span>:</a>
+                                            <ul>
+                                                <li>
+                                                    - Registo de
+                                                    peso, altura, circunferências, dobras e composição corporal por
+                                                    biometria.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Avaliação
+                                                    dietética</b></span>:</a>
+                                            <ul>
+                                                <li>
+                                                    - Registo
+                                                    da rotina alimentar.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Observações,
+                                                    diagnóstico e
+                                                    aconselhamento</b></span>:</a>
+                                            <ul>
+                                                <li>
+                                                    - Análise do quadro geral do
+                                                    paciente, determinar objetivos, explicação de conceitos de nutrição
+                                                    e apresentação dos métodos e rotinas a implementar.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Pós
+                                                    consulta</b></span>:
+                                            </a>
+                                            <ul>
+                                                <li>
+                                                    - Elaboração do
+                                                    plano alimentar baseado nas necessidades energéticas e nutricionais
+                                                    do paciente.
+                                                    Debater limitações apresentadas pelo paciente na implementação do
+                                                    plano na sua rotina e considerar os ajustes necessário para atingir
+                                                    os objetivos com sucesso.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-                        <ul class="list">
-                            <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Anamnese e Avaliação clínica</b></span>:
-                                    </a> <ul>
-                                        <li>
-                                            - Registo do historial clínico familiar e do paciente, bem como o seu
-                                            estilo de vida
-                                            praticado.
-                                        </li>
-                                    </ul></li>
-                            <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Avaliação bioquímica</b></span>: </a><ul>
-                                        <li>
-                                            - Registo
-                                            e avaliação de exames laboratoriais.
-                                        </li>
-                                    </ul></li>
-                            <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Antropometria</b></span>:</a>
-                                <ul>
-                                    <li>
-                                        - Registo de
-                                        peso, altura, circunferências, dobras e composição corporal por
-                                        biometria.
-                                    </li>
-                                </ul></li>
-                            <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Avaliação dietética</b></span>:</a>
-                                <ul>
-                                    <li>
-                                        -  Registo
-                                        da rotina alimentar.
-                                    </li>
-                                </ul></li>
-                            <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Observações, diagnóstico e
-                                            aconselhamento</b></span>:</a>
-                                        <ul>
-                                            <li>
-                                                - Análise do quadro geral do
-                                                paciente, determinar objetivos, explicação de conceitos de nutrição
-                                                e apresentação dos métodos e rotinas a implementar.
-                                            </li>
-                                        </ul></li>
-                            <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Pós consulta</b></span>:
-                                </a>
-                            <ul>
-                                <li>
-                                    - Elaboração do
-                                    plano alimentar baseado nas necessidades energéticas e nutricionais
-                                    do paciente.
-                                    Debater limitações apresentadas pelo paciente na implementação do
-                                    plano na sua rotina e considerar os ajustes necessário para atingir
-                                    os objetivos com sucesso.
-                                </li>
-                            </ul></li>
-                        </ul>
                     </div>
                 </div>
-                </div>
-            </div>
-             </div>
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
@@ -441,15 +457,16 @@
                                 <div class="icon text-center p-2">
                                     <img src="../img/icons/Nutrição.png" width="100">
                                 </div>
-                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas, clique em cada uma das seguintes consultas para saber
+                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas,
+                                    clique em cada uma das seguintes consultas para saber
                                     que consultas tem disponíveis.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
                                         <div class="card-text d-grid">
-                                            <button id="ABtn">a) Consulta de Nutrição Geral</button>
-                                            <button id="BBtn">b) Consulta de Nutrição Infantil</button>
-                                            <button id="DBtn">c) Consulta de Pré-conceção</button>
-                                            <button id="EBtn">d) Consulta de Pré-natal</button>
+                                            <button id="ABtn">Consulta de Nutrição Geral</button>
+                                            <button id="BBtn">Consulta de Nutrição Infantil</button>
+                                            <button id="DBtn">Consulta de Pré-conceção</button>
+                                            <button id="EBtn">Consulta de Pré-natal</button>
                                         </div>
                                     </div>
                                 </div>
@@ -548,7 +565,7 @@
             EBtn.classList.add("active");
             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
         }
-        function show(){
+        function show() {
             header.classList.remove("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
@@ -579,9 +596,9 @@
             }
         });
         window.addEventListener('hashchange', function () {
-        window.scrollTo({ top: 0, behavior: 'smooth' }); // Rola para o topo suavemente antes de recarregar
-        location.reload(); // Recarrega a página
-            });
+            window.scrollTo({ top: 0, behavior: 'smooth' }); // Rola para o topo suavemente antes de recarregar
+            location.reload(); // Recarrega a página
+        });
 
 
         // Adicionar funcionalidade dos botões
