--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -1,9 +1,9 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-   <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description"
+        content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -52,10 +52,11 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
- <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank"
+        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
-      </a>
+    </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -133,9 +134,9 @@
                 </div>
             </div>
             <div class="d-flex">
-                
-                <div  id="header" class="col-lg-8 col-md-8">
-                        <div class="row">
+
+                <div id="header" class="col-lg-8 col-md-8">
+                    <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
@@ -148,9 +149,9 @@
                                         emocional do seu filhote. </p>
 
                                 </div>
+                            </div>
+                        </div>
                     </div>
-                    </div>
-                </div>
                 </div>
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
@@ -301,7 +302,10 @@
                                 </p>
                                 <p>
                                     <br><br>
-                                    <b><i>Importante:</i></b> Esta consulta inclui a recolha da história clínica do paciente e exame físico do mesmo, sempre com a presença e autorização dos pais. Os pais devem trazer o boletim de saúde do seu filho, bem como o seu plano de vacinação.
+                                    <b><i>Importante:</i></b> Esta consulta inclui a recolha da história clínica do
+                                    paciente e exame físico do mesmo, sempre com a presença e autorização dos pais. Os
+                                    pais devem trazer o boletim de saúde do seu filho, bem como o seu plano de
+                                    vacinação.
                                 </p>
                             </div>
                             <a href="#" class="primary-btn">Marcar Consulta </a>
@@ -422,16 +426,17 @@
                                 <div class="icon text-center p-2">
                                     <img src="../img/icons/pediatria-alt.png" width="100">
                                 </div>
-                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas, clique em cada uma das seguintes consultas para saber
+                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas,
+                                    clique em cada uma das seguintes consultas para saber
                                     que consultas tem disponíveis.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
                                         <div class="card-text d-grid">
-                                            <button id="ABtn">a) Pediatria Pré-Natal</button>
-                                            <button id="BBtn">b) Pediatria de Rotina</button>
-                                            <button id="CBtn">c) Pediatria de Criança Doente</button>
-                                            <button id="DBtn">d) Sono Infantil</button>
-                                            <button id="EBtn">e) Pediatria de Introdução Alimentar</button>
+                                            <button id="ABtn">Pediatria Pré-Natal</button>
+                                            <button id="BBtn">Pediatria de Rotina</button>
+                                            <button id="CBtn">Pediatria de Criança Doente</button>
+                                            <button id="DBtn">Sono Infantil</button>
+                                            <button id="EBtn">Pediatria de Introdução Alimentar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -472,105 +477,105 @@
 
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showA() {
-             header.classList.add("d-none");
+            header.classList.add("d-none");
             ADiv.style.display = 'block'; // Exibe a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div pós-parto
             CDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
-            title.textContent = "a) Consulta de Pediatria Pré-Natal"; // Atualiza o texto para "Cirurgia"
-             img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pediatria Pré-Natal"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
             DBtn.classList.remove("active");
             EBtn.classList.remove("active");
-             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
         }
 
         // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
         function showB() {
-             header.classList.add("d-none");
+            header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'block'; // Exibe a div pós-parto
             CDiv.style.display = 'none'; // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            title.textContent = "b) Consulta de Pediatria de Rotina"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/blog-hero10.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pediatria de Rotina"; // Atualiza o texto para "Pós-parto"
+            img.style.backgroundImage = "url('../img/blog/details/blog-hero10.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
             CBtn.classList.remove("active");
             DBtn.classList.remove("active");
             EBtn.classList.remove("active");
-             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
         }
 
         // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
         function showC() {
-             header.classList.add("d-none");
+            header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             CDiv.style.display = 'block'; // Exibe a div pós-parto
             DDiv.style.display = 'none';  // Esconde a div Cirurgia
             EDiv.style.display = 'none';  // Esconde a div Cirurgia
-            title.textContent = "c) Consulta de Pediatria de Criança Doente"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/consultas em criancas.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pediatria de Criança Doente"; // Atualiza o texto para "Pós-parto"
+            img.style.backgroundImage = "url('../img/blog/details/consultas em criancas.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.add("active");
             DBtn.classList.remove("active");
             EBtn.classList.remove("active");
-             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
-        }    
-          // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
         function showD() {
-             header.classList.add("d-none");
+            header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             CDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            title.textContent = "d) Consulta de Sono Infantil"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/sono.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Sono Infantil"; // Atualiza o texto para "Pós-parto"
+            img.style.backgroundImage = "url('../img/blog/details/sono.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
             DBtn.classList.add("active");
             EBtn.classList.remove("active");
-             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
         }      // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
         function showE() {
-             header.classList.add("d-none");
+            header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             CDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'block'; // Exibe a div pós-parto
-            title.textContent = "e) Consulta de Pediatria de Introdução Alimentar"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/nutrio-infant.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pediatria de Introdução Alimentar"; // Atualiza o texto para "Pós-parto"
+            img.style.backgroundImage = "url('../img/blog/details/nutrio-infant.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
             DBtn.classList.remove("active");
             EBtn.classList.add("active");
-             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
         }
         function show() {
-             header.classList.remove("d-none");
+            header.classList.remove("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             CDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             title.textContent = "Pediatria"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/blog-hero10.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/blog-hero10.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
             DBtn.classList.remove("active");
             EBtn.classList.remove("active");
-             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
         }
         // Verificar o fragmento da URL e inicializar a página de acordo
         window.addEventListener('load', function () {
