--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,11 @@
-<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.png");'>
+<footer class="footer" style='background-image: url("../img/blog/details/blog-hero11.png");'>
     <div class="container text-md-start ">
         <!-- Grid row -->
         <div class="row mt-3">
             <!-- Grid column -->
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 text-white">
                 <!-- Content -->
-                <div class="footer-logo mb-2"><img src="img/footer-logo1.png" alt=""></div>
+                <div class="footer-logo mb-2"><img src="../img/footer-logo1.png" alt=""></div>
                 <p>
                     Desejamos apoiar as famílias na jornada da maternidade e paternidade, cuidando de todos
                     os
@@ -13,7 +13,7 @@
                     física, psicológica e emocionalmente.
                 </p>
                 <div class="load__more">
-                    <a href="info.html" class="primary-btn">Fale Connosco </a>
+                    <a href="../info.html" class="primary-btn">Fale Connosco</a>
                 </div>
             </div>
             <!-- Grid column -->
@@ -23,26 +23,29 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
                 <p>
-                    <a href="pages/amament-pre-parto.html" class="text-white">Amamentação</a>
+                    <a href="amament-pre-parto.html" class="text-white">Amamentação</a>
                 </p>
                 <p>
-                    <a href="pages/cirurgia.html" class="text-white">Cirurgia</a>
+                    <a href="cirurgia.html" class="text-white">Cirurgia</a>
                 </p>
                 <p>
-                    <a href="pages/enfermagem.html" class="text-white">Enfermagem</a>
+                    <a href="enfermagem.html" class="text-white">Enfermagem</a>
                 </p>
                 <p>
-                    <a href="pages/viajante.html" class="text-white">Medicina</a>
+                    <a href="viajante.html" class="text-white">Medicina</a>
                 </p>
                 <p>
-                    <a href="pages/nutricao.html" class="text-white">Nutrição</a>
+                    <a href="nutricao.html" class="text-white">Nutrição</a>
                 </p>
 
                 <p>
-                    <a href="pages/pediatria.html" class="text-white"><b>Pediatria</b></a>
+                    <a href="pediatria.html" class="text-white">Pediatria</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Testes diagnósticos
+                    <a href="terapia.html" class="text-white">Terapia ocupacional</a>
+                </p>
+                <p>
+                    <a href="teste.html" class="text-white">Testes diagnósticos
                     </a>
                 </p>
             </div>
@@ -56,24 +59,27 @@
                     <a href="#!" class="text-white">Apoio ao domicilio</a>
                 </p>
                 <p>
-                    <a href="pages/cursos.html" class="text-white">Cursos</a>
+                    <a href="cursos.html" class="text-white">Cursos</a>
                 </p>
 
                 <p>
                     <a href="#!" class="text-white">Galeria de fotos</a>
                 </p>
                 <p>
-                    <a href="galeria.html" class="text-white">Pedido de informação</a>
+                    <a href="../galeria.html" class="text-white">Pedido de informação</a>
                 </p>
                 <p>
                     <a href="#!" class="text-white">Primeiros Socorros</a>
                 </p>
                 <p>
-                    <a href="humanitario.html" class="text-white">Trabalho humanitário</a>
+                    <a href="../humanitario.html" class="text-white">Trabalho humanitário</a>
+                </p>
+                <p>
+                    <a href="vacinacao.html" class="text-white">Vacinação </a>
                 </p>
 
                 <p>
-                    <a href="#!" class="text-white">Workshops</a>
+                    <a href="#!" class="text-white">Workshop</a>
                 </p>
             </div>
             <!-- Grid column -->
@@ -82,13 +88,13 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold mb-2">Contacto</h4>
-                <p><img src="img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg. a Sex.
+                <p><img src="../img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg. a Sex.
                     8:00 às 18:00</p>
-                <p><img src="img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
+                <p><img src="../img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
                     geral@aclinica-mz.com</p>
-                <p><img src="img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
+                <p><img src="../img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
                     869 7194</p>
-                <p><img src="img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
+                <p><img src="../img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
                     Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)</p>
             </div>
             <!-- Grid column -->
@@ -98,17 +104,17 @@
     <div class="footer__copyright">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <div class="footer__copyright__text">
                         <p>@A Clinica (2025) Todos os direitos reservados. | <b class="text-white underline"> <a
                                     class="text-white" href="techzone.co.mz "> Powered by Techzone</a></b></p>
-
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <ul>
-                        <li>Termos de Uso</li>
-                        <li>Política de Privacidade</li>
+                        <li>Todos os Direitos Reservados</li>
+                        <li class="text-white"><a href="politica.html">Termos de Uso</a></li>
+                        <li class="text-white"><a href="politica.html">Política de Privacidade</a></li>
                     </ul>
                 </div>
             </div>
