--- a/pages/footer.html
+++ b/pages/footer.html
@@ -113,8 +113,8 @@
                 <div class="col-lg-6">
                     <ul>
                         <li>Todos os Direitos Reservados</li>
-                        <li>Termos & Uso</li>
-                        <li>Política de Privacidade</li>
+                        <li class="text-white"><a href="politica.html">Termos de Uso</a></li>
+                        <li class="text-white"><a href="politica.html">Política de Privacidade</a></li>
                     </ul>
                 </div>
             </div>
