--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -170,7 +170,7 @@
                     <div class="services__details">
                         <div class="services__details__pic">
                             <div class="services__details__pic">
-                                <img src="../img/blog/details/cursos.jpg" alt="">
+                                <img src="../img/blog/details/151.jpg" alt="">
                                 <!-- <div class="services__details__content">
                                     <div class="row w-100 align-items-center">
                                         <div class="col-lg-8 col-md-8 col-sm-8">
@@ -222,7 +222,8 @@
                 </div>
             </div>
             <div class="row">
-                <p><i>A Clínica</i> oferece cursos cuidadosamente desenvolvidos para proporcionar conhecimento essencial
+                <p class="mb-4"><i>A Clínica</i> oferece cursos cuidadosamente desenvolvidos para proporcionar
+                    conhecimento essencial
                     e
                     prático em diversas
                     áreas, garantindo que cada participante esteja bem preparado para enfrentar os desafios do dia a
@@ -233,7 +234,7 @@
                     ou profissionais da
                     área da saúde, aqui você encontrará formações estruturadas para atender às suas necessidades com
                     qualidade e confiança.</p>
-                <div class="col-lg-4 col-md-6 col-sm-6 mt-4">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="blog__item">
                         <div class="blog__item__pic">
                             <img src="../img/blog/amame-grupo.jpg" alt="">
