--- a/pages/header.html
+++ b/pages/header.html
@@ -10,7 +10,7 @@
                     </li>
                     <li><img src="../img/icons/horario.png" class="fa mr-2" width="16" height="16" alt=""> Seg a Sex
                         8:00
-                        às 18:00</li>
+                        às 18:00 | Sab: 9h às 12h</li>
                 </ul>
             </div>
             <div class="col-lg-2">
