--- a/footer.html
+++ b/footer.html
@@ -83,13 +83,13 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold mb-2">Contacto</h4>
                 <p><img src="img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg. a Sex.
-                    8:00 às 18:00</p>
+                    8:00 às 18:00 | Sab: 9h às 12h</p>
                 <p><img src="img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
                     geral@aclinica-mz.com</p>
                 <p><img src="img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
                     869 7194</p>
                 <p><img src="img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
-                    Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)</p>
+                    Shopping 24, Avenida 24 de Julho, Loja 20 </p>
             </div>
             <!-- Grid column -->
         </div>
