--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
             <div class="row">
-                <div class="col-lg-12 text-center" style="background-image: url('img/bg4.png');">
+                <div class="col-lg-12 text-center" style="background-color: #c9737c;">
                     <ul class="servocos d-flex flex-wrap justify-content-between">
                         <li>
                             <a href="pages/pediatria.html">
