--- a/pages/footer.html
+++ b/pages/footer.html
@@ -22,6 +22,9 @@
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
+                                <p>
+                    <a href="pages/pediatria.html" class="text-white"><b>Pediatria</b></a>
+                </p>
                 <p>
                     <a href="amament-pre-parto.html" class="text-white">Amamentação</a>
                 </p>
@@ -36,10 +39,6 @@
                 </p>
                 <p>
                     <a href="nutricao.html" class="text-white">Nutrição</a>
-                </p>
-
-                <p>
-                    <a href="pediatria.html" class="text-white">Pediatria</a>
                 </p>
                 <p>
                     <a href="terapia.html" class="text-white">Terapia ocupacional</a>
