--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -117,7 +117,7 @@
                                     <div class="section-title">
                                         <h2 class="mb-4 subtitle fw-bolder">Amamentação
                                         </h2>
-                                        <h5 class="mb-0 mt-4 h4"><b>O leite materno é o melhor alimento para o seu
+                                        <h5 class="mb-0 mt-4 h4"><b>O leite materno <br> é o melhor alimento para o seu
                                                 bebé!</b></h5>
                                         <p class="mb-4">A amamentação é um ato natural. A grande maioria das mulheres
                                             nasce com a
